syntax = "proto3";

package example;

option go_package = "pb-tool/grpc_output/pb";

// Import google api annotations for HTTP routes
import "google/api/annotations.proto";
// Import custom options for method annotations
import "custom_options.proto";

// Example message
message Example {
  string id = 1;
  string name = 2;
  int32 value = 3;
}

// Example service with full custom routes
service ExampleService {
  // GetExample with custom GET routes - 可以被内部服务请求
  rpc GetExample (GetExampleRequest) returns (Example) {
    option (example.publish) = true;
    option (google.api.http) = {
      get: "/v1/examples/{id}"
      additional_bindings: {
        get: "/examples/{id}"
      }
    };
  }

  // CreateExample with custom POST routes - 不可以被内部服务请求
  rpc CreateExample (Example) returns (Example) {
    option (example.publish) = false;
    option (google.api.http) = {
      post: "/v1/examples"
      body: "*"
      additional_bindings: {
        post: "/examples"
        body: "*"
      }
    };
  }

  // UpdateExample with custom PUT routes - 可以被内部服务请求
  rpc UpdateExample (Example) returns (Example) {
    option (example.publish) = true;
    option (google.api.http) = {
      put: "/v1/examples/{id}"
      body: "*"
      additional_bindings: {
        put: "/examples/{id}"
        body: "*"
      }
    };
  }

  // DeleteExample with custom DELETE routes - 不可以被内部服务请求
  rpc DeleteExample (GetExampleRequest) returns (DeleteExampleResponse) {
    option (example.publish) = false;
    option (google.api.http) = {
      delete: "/v1/examples/{id}"
      additional_bindings: {
        delete: "/examples/{id}"
      }
    };
  }

  // ListExamples with custom GET routes - 可以被内部服务请求
  rpc ListExamples (ListExamplesRequest) returns (ListExamplesResponse) {
    option (example.publish) = true;
    option (google.api.http) = {
      get: "/v1/examples"
      additional_bindings: {
        get: "/examples"
      }
    };
  }
}

// Request and Response messages
message GetExampleRequest {
  string id = 1;
}

message DeleteExampleResponse {
  bool success = 1;
  string message = 2;
}

message ListExamplesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListExamplesResponse {
  repeated Example examples = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}
